@@ -1,5 +1,5 @@
 /*
- *  Copyright (c) 2019, 2020, Oracle and/or its affiliates. All rights reserved.
+ *  Copyright (c) 2019, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -23,16 +23,16 @@
 
 /*
  * @test
+ * @enablePreview
  * @run testng TestLayoutConstants
  */
 
-import jdk.incubator.foreign.FunctionDescriptor;
-import jdk.incubator.foreign.MemoryLayout;
-
+import java.lang.foreign.FunctionDescriptor;
+import java.lang.foreign.MemoryLayout;
+import java.lang.foreign.ValueLayout;
 import java.lang.invoke.MethodHandles;
 import java.nio.ByteOrder;
 
-import jdk.incubator.foreign.ValueLayout;
 import org.testng.annotations.*;
 import static org.testng.Assert.*;
 
@@ -68,7 +68,6 @@ public class TestLayoutConstants {
         return new Object[][] {
                 //padding
                 {MemoryLayout.paddingLayout(32)},
-                { MemoryLayout.sequenceLayout(MemoryLayout.paddingLayout(32)) },
                 { MemoryLayout.sequenceLayout(5, MemoryLayout.paddingLayout(32)) },
                 { MemoryLayout.structLayout(MemoryLayout.paddingLayout(32), MemoryLayout.paddingLayout(32)) },
                 { MemoryLayout.unionLayout(MemoryLayout.paddingLayout(32), MemoryLayout.paddingLayout(32)) },
@@ -96,10 +95,6 @@ public class TestLayoutConstants {
                                 ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN))) },
                 { MemoryLayout.unionLayout(
                         MemoryLayout.paddingLayout(16),
-                        MemoryLayout.structLayout(
-                                MemoryLayout.paddingLayout(8),
-                                ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN))) },
-                { MemoryLayout.sequenceLayout(
                         MemoryLayout.structLayout(
                                 MemoryLayout.paddingLayout(8),
                                 ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN))) },
