@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2022, Oracle and/or its affiliates. All rights reserved.
  *  DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  *  This code is free software; you can redistribute it and/or modify it
@@ -24,12 +24,12 @@
 
 /*
  * @test
+ * @enablePreview
  * @requires !(((os.arch == "amd64" | os.arch == "x86_64") & sun.arch.data.model == "64") | os.arch == "aarch64")
- * @modules jdk.incubator.foreign/jdk.internal.foreign
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestUnsupportedPlatform
  */
 
-import jdk.incubator.foreign.CLinker;
+import java.lang.foreign.CLinker;
 import org.testng.annotations.Test;
 
 import static org.testng.Assert.assertNull;
